# dns-mcp-server

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
nginx/: entrypoint.sh  nginx.conf
src/dns_mcp_server/: __init__.py  http_server.py  resolver.py  server.py  types.py
tests/: test_http_server.py  test_integration.py  test_resolver.py  test_server.py  test_types.py
