[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dns-mcp-server"
version = "0.1.0"
description = "MCP server for comprehensive DNS lookups"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "dnspython>=2.6.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
dns-mcp-server = "dns_mcp_server.server:main"
dns-mcp-server-http = "dns_mcp_server.http_server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
